--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,80 +1,74 @@
-html {
-    height: 100%;
-}
-
 body {
     box-sizing: border-box;
-    font-size: 16px;
     margin: 0;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    height: 150px;
-    background-color: grey;
-    margin-bottom: 0;
-}
-nav {
-    padding: 10px 20px;
-}
-
-nav a {
-    font-size: 2rem;
-    font-weight: 400;
-    color: white;
     padding: 0;
-    margin: 0 20px;
-    text-decoration: none;
 }
 
-hr {
-    border: none;
-    height: 5px;
-    border-radius: 10px;
-    background: linear-gradient(to left, grey,white);
-    margin: 0;
+main {
+    margin: 20px;
 }
 
-.person {
+.row {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-flow: row wrap;
+    height: 700px;
+}
+.card-01 {
+    background-color: bisque;
+    position: relative;
+    flex: ;
+    height: 400px;
+    margin: 20px;
+
+}
+.card11 {
+    max-width: 200px;
+}
+
+.card12 {
+    min-width: 300px;
+    background-color: green;
+}
+
+.card-02 {
+    background-color: grey;
+    position: relative;
+    flex: 1;
+    max-width: 400px;
+    height: 400px;
+    margin: 20px;
+
+}
+
+.card-03 {
     background-color: black;
-    height: 80vh;
+    position: relative;
+    flex: 1;
+    max-width: 400px;
+    height: 400px;
+    margin: 20px;
+
 }
 
-.about {
-    width: 50%;
-    
-}
-.box {
-    min-width: 350px;
-    border: 5px solid black;
-    background: linear-gradient(to bottom, grey,black);
-    height: 200px;
-    padding: 20px;
-    margin: 100px 0px 100px 100px;
-    color: white;
-}
+@media all and (max-width: 800px) {
+    .card-01 {
+        flex: 60%;
+        max-width: 600px;
+        height: 400px;
+    }
 
-.box h1 {
-    font-size: 2rem;
-}
+    .card-02 {
+        flex: 60%;
+        max-width: 600px;
+        height: 400px;
+    }
 
-.box span {
-    font-size: 4em;
-    font-weight: 200;
+    .card-03 {
+        flex: 60%;
+        max-width: 600px;
+        height: 400px;
+    }
+
 }
-.pfp {
-    width: 50%;
-}
- .pfp div {
-    background-image: url("./images/ready\ pfp.jpeg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 100%;
-    background-position: center;
-    border-radius: 100% 100% 100% 100%;
- }
