--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,7 +12,7 @@ header {
  
 nav {
     min-height: 90px;
-    width: 50%;
+    width: 600px;
     margin: 0;
     display: flex;
     justify-content: flex-end;
@@ -63,10 +63,9 @@ nav a:visited {
 }
 
 .card11 {
-    width: 40%;
-    margin-left: 180px;
-}
+    width: 50%;
 
+}
 
 .card11 h1 {
     font-size: 3em;
@@ -85,12 +84,13 @@ nav a:visited {
 }
 
 .box {
-    height: 100%;
     position: relative;
+    width: 90%;
+    float: right;
 }
 
 .card12 {
-    min-width: 300px;
+  
     flex: 1; 
     background-image: url(./images/ready\ pfp.jpeg);
     background-size: contain;
@@ -104,6 +104,7 @@ hr {
     height: 5px;
     border-radius: 10px;
     background: linear-gradient(to left, grey,white);
+    margin: 0;
 }
 
 .card-02 {
@@ -144,7 +145,7 @@ hr {
 
 .website-1 {
     flex: 100%;
-    background-image: url(./images/Screen\ Shot\ 2022-09-28\ at\ 8.53.30\ PM.png);
+    background-image: url(./images/Screen\ Shot\ 2022-09-30\ at\ 9.53.29\ PM.png);
     background-size: cover;
     opacity: 0.6;
     background-repeat: no-repeat;
@@ -159,7 +160,7 @@ hr {
 .website-1 p {
     height: 40px;
     border: 4px solid black;
-    width: 30%;
+    width: 260px;
     position: absolute;
     opacity: 1;
     top: 220px;
@@ -185,7 +186,7 @@ hr {
 .website-2 p {
     height: 40px;
     border: 4px solid black;
-    width: 30%;
+    width: 100px;
     position: absolute;
     opacity: 1;
     bottom: 5px;
@@ -211,7 +212,7 @@ hr {
 .website-3 p {
     height: 40px;
     border: 4px solid black;
-    width: 35%;
+    width: 138px;
     position: absolute;
     opacity: 1;
     bottom: 5px;
@@ -263,31 +264,235 @@ hr {
 }
 
 .row-3 {
-    height: 400px;
+    height: 300px;
 }
 
-@media all and (max-width: 800px) {
-    .row {
-        min-height: 900px;
-        display: block;
-        justify-content: center;
+@media screen and (max-width: 830px) {
+    nav{
+        width: 100%;
+        justify-content: space-around;
     }
+    
+    .row {
+        justify-content: center;
+        position: relative;
+        background-color: black;
+    }
+
+    .card21 h1 {
+       text-align: center;
+       margin: 0;
+       float: none;
+    }
+
+    .card22 {
+        margin-top: 0;
+    }
+    
+    .row-1 {
+        height: 1300px;
+    }
+
+    .card21 {
+        height: 110px;
+        border: none;
+        display: block;
+        margin: 0 auto;
+    }
+
+   
+    .row-2 {
+        display: block;
+        height: 750px;
+    }
+    .row-3 {
+        display: block;
+        max-height: 750px;
+        color: black;
+    }
+
+    .card32 {
+        display: inline-block;
+        text-align: center;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    .card31 {
+        height: 110px;
+        border: none;
+        display: block;
+       margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    .card31 h1 {
+        text-align: center;
+        margin: 0;
+        float: none;
+        padding: 10px;
+     }
     .card-01 {
         flex: 100%;
         max-width: 600px;
-        height: 400px;
+        min-height: 200px;
+        margin: 0;
     }
 
-    .card-02 {
-        flex: 100%;
-        max-width: 600px;
-        height: 400px;
+    .box {
+        margin-left: 100px;
     }
     
-    .card-03 {
-        flex: 100%;
-        max-width: 600px;
+}
+
+@media screen and (max-width: 940px) {
+
+    .card12 {
+        background-position: top center;
+    }
+
+    .card11 .box{
+        float: left;
+    }
+}
+@media screen and (max-width: 580px) {
+    .card11 h1 {
+        font-size: 2em;
+        color: white;
+        margin-bottom: 20px;
+    }
+    
+    .box span {
+        font-size: 3em;
+        width: 100%;
+    }
+    
+    .box p {
+        color: white;
+        font-size: 1.5rem;
+    }
+
+    .card11 {
+        height: 400px;
+        display: block;
+        width: 100%;
+    }
+     .card12 {
+        display: block;
+        width: 100%;
+     }
+
+    .row-1 {
+        display: block;
+        height: 1100px;
+    }
+    .box {
+        margin: 0 auto;
+        text-align: center;
+        height: 420px;
+        width: 100%;
+    }
+    .website-2 p {
+        left: 1px;
+    }
+
+    .website-3 p {
+        left: 1px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    nav{
+        flex-direction: column;
+        font-size: 2rem;
+    }
+
+    nav a:link {
+        font-size: 1.5rem;
+        font-weight: 500; 
+    }
+    
+    .website p {
+        font-size: 1.4rem;
+    }
+
+    .website-1 p {
+    width: 200px;
+    }      
+
+    .website-2 p {
+    width: 80px;
+    }
+    
+    .website-3 p {
+    width: 105px;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .card11 h1 {
+        font-size: 1.5em;
+        color: white;
+        margin-bottom: 20px;
+    }
+    
+    .box span {
+        font-size: 2.5em;
+        width: 100%;
+    }
+
+   .card11 {
+        height: 300px;
+    }
+    
+    .box {
+        height: 300px;
+    }
+    
+    .box p {
+        color: white;
+        font-size: 1rem;
+        text-align: center;
+         width: 80%; 
+         margin: 0 auto;
+    }
+
+    .row-1 {
+        height: 700px;
+    }
+
+    .card12 {
         height: 400px;
     }
 
+    #mywork , #contactme {
+        font-size: 3rem;
+    }
+    
+    .card32 p {
+        font-size: 1.5em;
+    }
 }
+
+@media screen and  (max-width: 325px){
+    .website p {
+        font-size: 1rem;
+    }
+    .website-1 p {
+        width: 150px;
+        height: 20px;
+        left: 30px;
+        top: 250px;
+        }      
+        
+        .website-2 p {
+        width: 60px;
+        height: 20px;
+        }
+        
+        .website-3 p {
+        width: 80px;
+        height: 20px;
+     }
+}
+    
