--- a/assets/styles.css
+++ b/assets/styles.css
@@ -145,7 +145,7 @@ hr {
 
 .website-1 {
     flex: 100%;
-    background-image: url(./images/Screen\ Shot\ 2022-09-30\ at\ 9.53.29\ PM.png);
+    background-image: url(./images/Screen\ Shot\ 2022-11-03\ at\ 1.55.25\ AM.png);
     background-size: cover;
     opacity: 0.6;
     background-repeat: no-repeat;
@@ -198,7 +198,7 @@ hr {
 }
 
 .website-3 {
-    background-image: url(./images/Screen\ Shot\ 2022-09-28\ at\ 9.50.14\ PM.png);
+    background-image: url(./images/Screen\ Shot\ 2022-09-30\ at\ 9.53.29\ PM.png);
     background-size: contain;
     width: 45%;
     position: relative;
